Show when users are typing under message box #4

--- a/ui/main.css
+++ b/ui/main.css
@@ -22,6 +22,8 @@ body {
     padding: 0;
     color: rgb(255, 255, 255);
     -ms-overflow-style: none;
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: antialiased;
 }
 
 ::-webkit-scrollbar {
@@ -730,6 +732,29 @@ img.emoji {
     outline: none;
 }
 
+#typing {
+    margin-top: 53px;
+    padding-left: 24px;
+    display: inline-block;
+    width: 100%;
+    visibility: hidden;
+}
+    
+#typingtext {
+    font-size: 9px;
+    display: inline;
+    width: 80%;
+    cursor: default;
+}
+    
+.messagebox .typingdot {
+    display: inline-block;
+}
+
+#typing::selection, #typingtext::selection, .messagebox {
+    background: none;
+}
+
 .messagebox .messages {
     height: calc(100% - 75px);
     width: calc(100% - 15px);
@@ -1350,5 +1375,63 @@ img.emoji {
       transform: rotate(360deg);
     }
   }
+
+  .lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 20px;
+    height: 13px;
+  }
+  .lds-ellipsis div {
+    position: absolute;
+    top: 8px;
+    width: 3px;
+    height: 3px;
+    border-radius: 50%;
+    background: #fff;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 2px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 2px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 14px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(6px, 0);
+    }
+  }
+  
+  
   
   /* ^^^ From https://loading.io/css/ ^^^ */
